# domaindigger

./: .gitignore  README.md  pyproject.toml
domaindigger/: __main__.py  banner.py  cli.py
domaindigger/scanner/: bruteforce.py  dns.py  passive.py  probe.py
domaindigger/utils/: output.py  resolver.py  wordlist.py
